# WebApps_001

./: movies.db  pyproject.toml
src/: fastapi_endp.py  flask_project.py  sqlite_handling.py
src/templates/: add copy 2.html  add copy.html  add.html  home.html
src/webapps_001/: __init__.py  index.html  sqlite_handling.py
