[project]
name = "webapps-001"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mateusz", email = "mateusz.malinowski.1991@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.4",
    "flask>=3.1.2",
]

[project.scripts]
webapps-001 = "webapps_001:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "src",
]
